--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,10 +3,12 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.1.1-preview",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.rendering.hybrid": "0.1.1-preview",
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
